[gd_scene load_steps=8 format=2]

[ext_resource path="res://Projectiles/Poster/PaperRef.png" type="Texture" id=1]
[ext_resource path="res://Projectiles/Poster/PosterProjectile.gd" type="Script" id=2]
[ext_resource path="res://Common/HurtAndHitBox/HitBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Common/HurtAndHitBox/HurtBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Projectiles/Poster/Attack.wav" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
resource_local_to_scene = true
extents = Vector2( 3, 4 )

[sub_resource type="RectangleShape2D" id=2]
resource_local_to_scene = true
extents = Vector2( 2, 3 )

[node name="PosterProjectile" type="Sprite"]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
bus = "GameSFX"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true
autostart = true

[node name="HitBox" parent="." instance=ExtResource( 3 )]
collision_layer = 2
damage = 15.0

[node name="CollisionShape2D" parent="HitBox" index="0"]
shape = SubResource( 1 )

[node name="HurtBox" parent="." instance=ExtResource( 4 )]
collision_mask = 1024
monitorable = true

[node name="CollisionShape2D" parent="HurtBox" index="0"]
shape = SubResource( 2 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="body_entered" from="HurtBox" to="." method="_on_HurtBox_body_entered"]

[editable path="HitBox"]
[editable path="HurtBox"]
